--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,20 +3,28 @@
 	padding: 0;
 }
 
+.active {
+	display: block;
+}
+
+.hide {
+	display: none;
+}
+
 @media (min-width: 992px) and (max-width: 1199px) {
-	.header .hamburger,  .header .links-mobile{
+	.header .hamburger {
 		display: none;
 	}
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-	.header .hamburger,  .header .links-mobile{
+	.header .hamburger {
 		display: none;
 	}
 }
 
 @media (max-width: 767px) {
-	.header .hamburger,  .header .links-mobile{
+	.header .hamburger {
 		display: none;
 	}
 }
@@ -32,6 +40,9 @@
 	.header .links {
 		display: none;
 	}
+	.header .links_active {
+		display: flex;
+	}
 	.header .languages {
 		width: 20px;
 		margin-right: 40px;
@@ -43,19 +54,8 @@
 	.header .hamburger {
 		display: flex;
 	}
-	.header .links-mobile {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		width: 50%;
-		height: 100vh;
-		position: fixed;
-		top: 0;
-		left: 0;
-		background-color: rgba(255, 119, 0, 0.8);
-		z-index: 20;
-		transition: 0.6s all;
+	.main {
+		width: 100vw;
 	}
 	.main h1 {
 		font-size: 40px;
@@ -70,14 +70,6 @@
 		margin-bottom: 100%;
 	}
 
-}
-
-.active {
-	display: block;
-}
-
-.hide {
-	display: none;
 }
 
 .main {
@@ -122,6 +114,21 @@
 .links a:hover {
 	color: #FF7700;
 	font-size: 13px;
+}
+
+.header .links_active {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 50%;
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: rgba(255, 119, 0, 0.8);
+	z-index: 20;
+	transition: 0.6s all;
 }
 
 .header-wrapper {
